--- a/Example/example.tex
+++ b/Example/example.tex
@@ -57,9 +57,9 @@
 	%subsubsubsection indent=7em 目录第四级的缩进，默认是7em
 	%paragraph indent=11em 目录第五级的缩进，默认是11em
 	%subparagraph indent=13em 目录第六级的缩进，默认13em
-	%indent=normal/noindent/sameforsubandsubsub 快速缩进设置，具体见文档
+	%indent=normal/noindent/hustnoindent/sameforsubandsubsub 快速缩进设置，具体见文档
 	%请注意在合适的位置放置\pagenumbering{numstyle}使用新的页码
-	\tableofcontents
+    \tableofcontents[indent=hustnoindent]
 	
 	\clearpage%结束上一页
 	\pagenumbering{arabic} %正文页码为阿拉伯数字
