--- a/Instruction/HGP.dtx
+++ b/Instruction/HGP.dtx
@@ -67,6 +67,9 @@
 % \par\noindent\DescribeMacro{bstcite} 使用GBT7714-2005参考文献样式（默认）。
 % \par\noindent\DescribeMacro{tsinghuacite} 使用清华大学论文的参考文献样式，详见\href{https://www.ctan.org/tex-archive/macros/latex/contrib/thuthesis}{ThuThesis}。
 % 
+% \subsection{查重协助}\label{subsec:dcheck}
+% \par\noindent\DescribeMacro{chachong} 确保生成的PDF中重要信息，如“目录”和“参考文献”字样，能够识别，会在论文开开头打印一页（或数页）多余内容，最终打印版本不建议使用这个选项，详见\nameref{sec:dcheck}。
+% 
 % \section{页面与章节}
 % \par 本模板针对论文内容设定了如下几个新的/重写的页面：
 % 
@@ -292,13 +295,14 @@
 % \par 根据华中科技大学官方毕业论文模板要求，章节标题使用黑体加粗，为了方便加粗效果的实现，本模板使用伪加粗而非独立的粗体黑体字体。但因为\CTeX 宏包内部设置问题（也许是编译器的问题），如果在章节标题后使用图表环境，且图表位置设置为在此处（h），伪加粗格式会继续保留到本页结束。
 % \par 因为该问题涉及其他宏包，暂未找到比较好的解决办法。建议不要暂时不要在标题后使用在此处（h）的图片。
 % 
-% \section{关于查重}
-% \par 据我目前了解到的情况我们学校使用的是知网查重，硕博论文提交窗口要求的提交的格式也是PDF。本科论文似乎是通过各院系教务科统一提交，通常是提交PDF文档，部分院系可能要求提交WORD文档，对于这个问题，我目前找到两种解决方案：
+% \section{关于查重}\label{sec:dcheck}
+% \par 我们学校目前使用知网系统进行查重，提交格式支持WORD和PDF。但因为\XeLaTeX 底层原因，PDF中部分伪加粗的字不能被识别，这个方案目前没有很好的解决方案，所以本模板提供了一个样式选项|chachong|（详见\nameref{subsec:dcheck}），这个会在文章开头添加一页（或多页）包含比较重要的加粗字符，使\XeLaTeX 提前编码他们\footnote{更多这个问题的相关内容可以参考\href{https://www.zhihu.com/question/59597144}{知乎}和\href{http://bbs.ctex.org/forum.php?mod=viewthread&tid=77725&page=1}{\CTeX 论坛}}，但使用过程中需要使用其他PDF工具删除开头多余的一页（或多页），推荐使用Adobe Acrobat和\href{https://smallpdf.com/split-pdf}{smallpdf.com}。
+% \par 如果期望使用WORD，由于上述原因，我目前找到两种比较好的WORD的生成方案：
 % \begin{enumerate}
-%	\item 通过Adobe Acrobat导出到Microsoft Word，这是我目前找到的唯一一个可以比较完美识别PDF格式并转换为WORD格式的工具，导出格式中的公式图片可能存在问题，但是查重不查公式图片，所以问题不大，但缺点是这个工具是收费的；
+%	\item 通过Adobe Acrobat导出到Microsoft Word，这是我目前找到的唯一一个可以比较完美识别加粗字符并转换为WORD格式的工具，导出格式中的公式图片可能存在问题，但是查重不查公式图片，所以问题不大，但缺点是这个工具是收费的；
 % 	\item 通过Pandoc\footnote{官网链接：\url{http://pandoc.org/}}直接从\LaTeX 转换为Microsoft Word\footnote{转换命令：pandoc TeXfile.tex --toc  --reference-docx=WORDRef.docx --output WORDfile.docx}，这需要一个已经设置好各级标题样式的WORD文档作为格式参考，好处是转换结果中公式都能完整展现，坏处是需要已经设定好格式的WORD文档而且直接生成PDF脚本的命令（如各种绘图宏包）不能正常工作。
 % \end{enumerate}
-% \par 个人认为提交的WORD文档仅作为查重使用，并不需要格式完全准确，所以虽然转换得到的WORD存在各种问题，但并不会有太大影响。当然，如果对最终提交的WORD格式有近乎完美的追求，建议使用WORD直接进行论文排版。关于这个问题如果您有更好的建议也请\href{mailto:me@stringblog.com}{联系我}。
+% \par 个人认为提交的WORD文档仅作为查重使用，并不需要格式完全准确，所以虽然转换得到的WORD存在各种问题，但并不会有太大影响。当然，如果对最终提交的WORD格式有近乎完美的追求，建议使用WORD直接进行论文排版。关于这个问题如果您有更好的建议也请\href{mailto:me@stringblog.com}{联系我}。如果有更多关于查重的问题也建议去自己院系的教务科询问。
 % 
 % \section{写在最后}
 % \par \LaTeX 是一个强大的排版工具，本文所述内容只包含了本模板实现的主要功能，其他诸多功能不能尽述，希望使用者，尤其是初学者，能够针对性参考其他文档进行排版。
