--- a/Instruction/HGP.dtx
+++ b/Instruction/HGP.dtx
@@ -12,7 +12,7 @@
 % \tableofcontents
 % 
 % \section{快速开始}
-% \par 请注意，本模板需要使用xeCJK宏包，因此只能在\XeLaTeX 下进行编译。
+% \par 请注意，本模板需要使用xeCJK宏包，因此只能在\XeLaTeX 下进行编译。本模板需要华文中宋字体，详见“\nameref{subsec:font}”。
 % \subsection{在Windows系统中}
 % \begin{enumerate}[itemsep=0pt,parsep=0pt]
 % 	\item 下载\footnote{\label{fn:mirror}校园网用户可以前往\href{http://mirror.hust.edu.cn/CTAN/}{华中科技大学开源镜像站}快速下载}并安装最新版本的MiK\TeX （推荐）或者\TeX\space Live；
@@ -50,7 +50,7 @@
 % \par 本样式基于\CTeX 宏包，因此可以在Windows系统下和Mac OS X系统下自动识别并使用中易字体和华文字体，关于字体问题更多请见“~\nameref{subsec:font}”，如果需要在其他系统下或者希望选用其他字体请只用这个样式选项.
 % \par\noindent\DescribeMacro{autofont} 使用\CTeX 宏包自动设置字体，针对Windows和Mac OS X，详见“~\nameref{subsec:font}”（默认）。
 % \par\noindent\DescribeMacro{adobefont} 使用Adobe公司的四款中文字体。\cite[\S 4.3]{ctexdoc}
-% \par\noindent\DescribeMacro{fancdolfont} 使用Fandol中文字体。\cite[\S 4.3]{ctexdoc}
+% \par\noindent\DescribeMacro{fandolfont} 使用Fandol中文字体。\cite[\S 4.3]{ctexdoc}
 % \par\noindent\DescribeMacro{founderfont} 使用方正公司中文字体。\cite[\S 4.3]{ctexdoc}
 % \par\noindent\DescribeMacro{macfont} 使用Mac OS X下的华文字体。\cite[\S 4.3]{ctexdoc}
 % \par\noindent\DescribeMacro{ubuntufont} 使用Ubuntu 系统下的文泉驿和文鼎字体。\cite[\S 4.3]{ctexdoc}
@@ -296,7 +296,7 @@
 % \par 因为该问题涉及其他宏包，暂未找到比较好的解决办法。建议不要暂时不要在标题后使用在此处（h）的图片。
 % 
 % \section{关于查重}\label{sec:dcheck}
-% \par 我们学校目前使用知网系统进行查重，提交格式支持WORD和PDF。但因为\XeLaTeX 底层原因，PDF中部分伪加粗的字不能被识别\footnote{伪加粗的文字往往有重要意义，比如“目录”和“参考文献”是不查重的，如果无法识别这些字会导致查重率偏高}，这个问题目前没有很好的解决方案，所以本模板提供了一个样式选项|chachong|（详见\nameref{subsec:dcheck}），这个会在文章开头添加一页（或多页）包含比较重要的加粗字符，使\XeLaTeX 提前编码他们\footnote{更多这个问题的相关内容可以参考\href{https://www.zhihu.com/question/59597144}{知乎}和\href{http://bbs.ctex.org/forum.php?mod=viewthread&tid=77725&page=1}{\CTeX 论坛}}，但使用过程中需要\textbf{使用其他PDF工具删除开头多余的一页（或多页）}，推荐使用Adobe Acrobat和~\href{https://smallpdf.com/split-pdf}{smallpdf.com}。也建议在上传知网查重前使用WORD打开PDF文件，确保"目录"、"参考文献"和声明部分WORD能够识别。
+% \par 我们学校目前使用知网系统进行查重，提交格式支持WORD和PDF。但因为\XeLaTeX 底层原因，PDF中部分伪加粗的字不能被识别\footnote{伪加粗的文字往往有重要意义，比如“目录”和“参考文献”是不查重的，如果无法识别这些字会导致查重率偏高}，这个问题最好的解决方案是设置使用本身带有粗体的OpenType字体，比如Fandol字体（详见“\nameref{subsec:setupfont}”）；如果期望使用没有粗体的字体或者TrueType字体，本模板也提供了一个样式选项|chachong|（详见\nameref{subsec:dcheck}），这个会在文章开头添加一页（或多页）包含比较重要的加粗字符，使\XeLaTeX 提前编码他们\footnote{更多这个问题的相关内容可以参考\href{https://www.zhihu.com/question/59597144}{知乎}和\href{http://bbs.ctex.org/forum.php?mod=viewthread&tid=77725&page=1}{\CTeX 论坛}}，但使用过程中需要\textbf{使用其他PDF工具删除开头多余的一页（或多页）}，推荐使用Adobe Acrobat和~\href{https://smallpdf.com/split-pdf}{smallpdf.com}。另外建议在上传知网查重前使用WORD打开PDF文件，确保"目录"、"参考文献"和声明部分WORD能够识别。
 % \par 如果期望使用WORD，由于上述原因，我目前找到两种比较好的WORD的生成方案：
 % \begin{enumerate}
 %	\item 通过Adobe Acrobat导出到Microsoft Word，这是我目前找到的唯一一个可以比较完美识别加粗字符并转换为WORD格式的工具，导出格式中的公式图片可能存在问题，但是查重不查公式图片，所以问题不大，但缺点是这个工具是收费的；
