Add additional instructions on installing STZhongsong on Mac OS

--- a/Instruction/HGP.dtx
+++ b/Instruction/HGP.dtx
@@ -239,7 +239,7 @@
 % 	\item[其他] Fandol字库\footnote{由马起园、苏杰、黄晨成等人开发的开源中文字体，参见：\url{https://www.ctan.org/pkg/fandol}。}\cite[\S 4.3]{ctexdoc}
 % \end{description}
 % \par 考虑到学校官方模板并未对宋体、黑体的具体字体做以要求，如果您使用Windows或者Mac OS X您无需进行其他设置，否则请您参考“~\nameref{subsec:setupfont}”选择期望使用的字体。
-% \par 但问题在于，学校官方模板标题页中会使用到华文中宋（STZhongsong）字体，该字体是微软\textsuperscript{\textregistered}公司出品的Office产品中的字体\footnote{该字体实为中国常州华文印刷新技术有限公司\textsuperscript{\texttrademark}开发。}，为了避免版权纠纷，本模板未包含该字体。鉴于本人未在互联网上找到该字体的正版购买渠道，因此{\bfseries 如果需要使用本模板请安装Office软件。因下载安装使用盗版字体造成的版权纠纷与本人无关。}如果您是华中科技大学校园网用户，您可以前往\href{http://software.hust.edu.cn/}{智慧华中大~正版软件服务平台}下载安装正版Microsoft Office。
+% \par 但问题在于，学校官方模板标题页中会使用到华文中宋（STZhongsong）字体，该字体是微软\textsuperscript{\textregistered}公司出品的Office产品中的字体\footnote{该字体实为中国常州华文印刷新技术有限公司\textsuperscript{\texttrademark}开发。}，为了避免版权纠纷，本模板未包含该字体。鉴于本人未在互联网上找到该字体的正版购买渠道，因此{\bfseries 如果需要使用本模板请安装Office软件。因下载安装使用盗版字体造成的版权纠纷与本人无关。}如果您是华中科技大学校园网用户，您可以前往\href{http://software.hust.edu.cn/}{智慧华中大~正版软件服务平台}下载安装正版Microsoft Office。\footnote{对于Mac OS X用户，可能需要在安装Office后手动将华文中宋字体导入系统字体册，以Office 2016为例，拷贝“/应用程序/Microsoft Word/Contents/Resources/DFonts/STZHONGS.ttf”至非系统位置（如桌面），打开并点击右下角“安装字体”。}
 % 
 % \section{一个小例子}\label{sec:example}
 % 为了方便使用，在这里提供一个简单的使用范例，范例中只有少量注释，请参考前文查看。本模板还包含了一个相对详细的例子，在“Example”文件夹下，如果需要也可参考该样例。
