--- a/Example/example.tex
+++ b/Example/example.tex
@@ -58,6 +58,13 @@
 	%paragraph indent=11em 目录第五级的缩进，默认是11em
 	%subparagraph indent=13em 目录第六级的缩进，默认13em
 	%indent=normal/noindent/hustnoindent/sameforsubandsubsub 快速缩进设置，具体见文档
+	%dot sep=4.5 目录点间距，默认4.5
+	%section dot sep=4.5 目录第一级的点间距，默认是4.5
+	%subsection dot sep=4.5 目录第二级的点间距，默认是4.5
+	%subsubsection dot sep=4.5 目录第三级的点间距，默认是4.5
+	%subsubsubsection dot sep=4.5 目录第四级的点间距，默认是4.5
+	%paragraph dot sep=4.5 目录第五级的点间距，默认是4.5
+	%subparagraph dot sep=4.6 目录第六级的点间距，默认是4.5
 	%请注意在合适的位置放置\pagenumbering{numstyle}使用新的页码
     \tableofcontents
 	
