--- a/Instruction/HGP.dtx
+++ b/Instruction/HGP.dtx
@@ -125,7 +125,7 @@
 % 请注意英文关键词使用{\bfseries 英文分号+一个空格}进行分割。
 % 
 % \subsection{目录}\label{subsec:toc}
-% 根据官方样式，目录包含中英文摘要、正文、致谢、参考文献和附录。本模板已经将上述内容加入到目录中，无需手动设置。使用方法：在正文中使用命令\DescribeMacro{\tableofcontents}|\tableofcontents[<可选参数>]|生成目录。目录包含10个可选参数，可选参数之间使用英文逗号分隔，可选参数分别是：\\
+% 根据官方样式，目录包含中英文摘要、正文、致谢、参考文献和附录。本模板已经将上述内容加入到目录中，无需手动设置。使用方法：在正文中使用命令\DescribeMacro{\tableofcontents}|\tableofcontents[<可选参数>]|生成目录。目录包含17个可选参数，可选参数之间使用英文逗号分隔，可选参数分别是：\\
 % \DescribeMacro{pagenum} |pagenum=yes/no/true/false|表示目录页面是否显示页码，其中yes/true为显示页码no/false为不显示页码，默认不显示。\\
 % \DescribeMacro{toc in toc}|toc in toc=yes/no/true/false|表示是否将目录本身加入到目录中，默认不加入。请注意，即使设置不显示页码，设置在目录中显示目录的时候仍然会在目录中显示被隐藏的页码。\\
 % \DescribeMacro{level}|level=4|表示目录的级数，默认为4。\\
@@ -135,7 +135,14 @@
 % \DescribeMacro{subsubsubsection indent}|subsubsubsection indent=7em|表示目录第四级缩进，默认7em。\\
 % \DescribeMacro{paragraph indent}|paragraph indent=11em|表示目录第五级缩进，默认11em。\\
 % \DescribeMacro{subparagraph indent}|subparagraph indent=13em|表示目录第六级缩进，默认13em。\\
-% \DescribeMacro{indent}|indent=normal/noindent/hustnoindent/sameforsubandsubsub|用于快速设定缩进，其中|normal|使用默认缩进；|noindent|为各级目录皆无缩进；|hustnoindent|为华中科技大学毕业论文格式示例中的目录缩进样式，数字与标题之间的空格除第一级为3em外，其余均为2em；|sameforsubandsubsub|使第二级之后缩进相同，都为1.5em，此时第一级仍为0em。
+% \DescribeMacro{indent}|indent=normal/noindent/hustnoindent/sameforsubandsubsub|用于快速设定缩进，其中|normal|使用默认缩进；|noindent|为各级目录皆无缩进；|hustnoindent|为华中科技大学毕业论文格式示例中的目录缩进样式，数字与标题之间的空格除第一级为3em外，其余均为2em；|sameforsubandsubsub|使第二级之后缩进相同，都为1.5em，此时第一级仍为0em。\\
+% \DescribeMacro{dot sep}|dot sep=4.5|表示目录点间距，默认4.5。\\
+% \DescribeMacro{section dot sep}|section dot sep=4.5|表示目录第一级点间距，默认4.5。\\
+% \DescribeMacro{subsection dot sep}|subsection dot sep=4.5|表示目录第二级点间距，默认4.5。\\
+% \DescribeMacro{subsubsection dot sep}|subsubsection dot sep=4.5|表示目录第三级点间距，默认4.5。\\
+% \DescribeMacro{subsubsubsection dot sep}|subsubsubsection dot sep=4.5|表示目录第四级点间距，默认4.5。\\
+% \DescribeMacro{paragraph dot sep}|paragraph dot sep=4.5|表示目录第五级点间距，默认4.5。\\
+% \DescribeMacro{subparagraph dot sep}|subparagraph dot sep=4.5|表示目录第六级点间距，默认4.5。
 % \par 在之前的版本中，还使用了\DescribeMacro{\maketoc}|\maketoc[<nopagenum/pagenum/pagenumtoc>]|命令，该命令包含一个可选参数，其中：|nopagenum|指目录没有页码（默认值）；|pagenum|指目录有页码；|pagenumtoc|指目录有页码，且目录两字出现在目录中。该命令仍然被支持。
 % \par 请注意本模板不会自动设置页码格式，具体页码设置方法，请参考“{\itshape ~\nameref{subsec:pagenum}}”。
 % 
