Add instruction about package depandence

--- a/Example/HustGraduPaper.cls
+++ b/Example/HustGraduPaper.cls
@@ -729,7 +729,7 @@
 %	---	重新定义参考文献页
 %
 %设置参考文献
-\usepackage{natbib}
+\RequirePackage{natbib}
 \setcitestyle{numbers,square,comma}
 \ctexset{bibname={参考文献}}
 
